# FXorcist-FOMOFX-Edition

./: .gitignore  .kilocodemodes  .pre-commit-config.yaml  COMPREHENSIVE_USAGE_GUIDE.md  CONTRIBUTING.md  Dockerfile  HOW_TO_USE.md  IMPROVEMENT_REPORT.md  MIGRATION_GUIDE.md  PROGRESS.md  README.md  README_ADVANCED.md  README_AI.md  TRAINING_IMPROVEMENTS_README.md  UAT_ROLLING_VALIDATION.md  UNIFIED_FOREX_SYSTEM_README.md  advanced_system_dashboard.py  advanced_training_pipeline.py  advanced_training_pipeline_memory_efficient.py  automated_training_pipeline.py  automated_training_pipeline_fixed.py  comprehensive_2024_training.py  comprehensive_2024_training_all_indicators.py  comprehensive_2024_training_enhanced.py  comprehensive_2024_training_enhanced_fixed.py  comprehensive_2024_training_final.py  comprehensive_2024_training_final_all_indicators.py  comprehensive_2024_training_fixed.py  comprehensive_2024_training_v2.py  comprehensive_2024_training_v3.py  comprehensive_training_pipeline.py  config.yaml  continuous_training_scheduler.py  create_memory_system_starter.py  data_cleaning_fix.py  debug_page.html  demo_verbose_training.py  diagnose_indicators.py  docker-compose.yml  enhanced_training_dashboard.py  (+35 more)
config/: alert_rules.json  onboarding_progress.json  pipeline.yaml
dashboard/: README.md  app.py  enhanced_app.py  package.json  simple_results.py  tailwind.config.js  tsconfig.json  unified_app.py  vite.config.ts
data_validation/: clean_data.py  validate_data.py
deploy/: docker-compose.yml
docs/: ADVANCED_FEATURES_GUIDE.md  API_REFERENCE.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_GUIDE.md  AUDIT_REPORT_2025.md  AUDIT_REPORT_2025_V2.md  BACKTEST_PIPELINE.md  CLI_ANALYSIS.md  CLI_GUIDE.md  DASHBOARD_ANALYSIS.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  DEVELOPMENT_ISSUES.md  DEVELOPMENT_PROCESS.md  EXAMPLES_GUIDE.md  EXPERT_REVIEW.md  IMPLEMENTATION_GUIDE_2025.md  ML_AI_ANALYSIS.md  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_GUIDE.md  OPTIMIZATION_REPORT.md  PIPELINE_ALIGNMENT.md  PROJECT_CONTEXT.md  PROJECT_SCOPE.md  PROJECT_STATE.md  ROADMAP.md  TESTING_AUTOMATION_ANALYSIS.md  TROUBLESHOOTING_GUIDE.md  USER_GUIDE.md  audit.md  development_roadmap.md  feature_engineering_documentation.md  memory_system_architecture.md  production_checklist.md
examples/: run_cycle.py
fxorcist/: __init__.py  __main__.py  cli.py  config.py  main.py
integrations/: INTEGRATION_PLAN.md  README.md  requirements.txt
memory_system/: __init__.py  adapters.py  anomaly.py  api.py  core.py  embeddings.py  event_bus.py  eventbus.py  federated.py  memory.py  metadata.py  utils.py
optuna_studies/: catboost_optimization_results.json  comprehensive_catboost.db
planning_document/: planning.md  planning_final.md  planning_final_extended.md  planning_improved.md  planning_improved_extended.md
reinforcement/: model_tracker.py
scripts/: apply_fxorcist_v3.sh  apply_refactor.sh  clean_data.py  dashboard_launcher.py  deploy.sh  enhanced_deploy.sh  (+12 more)
(+200 files in other folders)
