[project]
name = "fxorcist"
version = "0.3.0"
description = "FXorcist — research and backtest framework"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
fxorcist = "fxorcist.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
