[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fxorcist"
version = "0.1.0"
description = "Event-Driven Forex Backtesting & Optimization Platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "FXorcist Development Team", email = "dev@fxorcist.com"}
]
keywords = ["forex", "trading", "backtesting", "machine-learning", "optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.5.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "optuna>=3.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.0.270",
    "black>=23.3.0",
    "mypy>=1.3.0",
    "isort>=5.12.0",
]
dashboard = [
    "streamlit>=1.22.0",
    "plotly>=5.14.0",
]
ml = [
    "scikit-learn>=1.2.0",
    "xgboost>=1.7.0",
    "catboost>=1.2.0",
]

[project.scripts]
fxorcist = "fxorcist.cli:app"

[tool.setuptools]
packages = ["fxorcist"]

[tool.ruff]
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_any_generics = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=fxorcist",
    "--cov-report=term-missing",
    "--cov-fail-under=80"
]